unpackaged/main/default/objects/bt_stripe__Tier__c/bt_stripe__Tier__c.object-meta.xml
<CustomObject>
    <description>Used by Stripe Billing. This stores and syncs Tier Price data.</description>
    <label>Tier</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Tier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>