unpackaged/main/default/objects/bt_stripe__Tier__c/fields/bt_stripe__Flat_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Flat_Amount__c</fullName>
    <description>Price for the entire tier.</description>
    <inlineHelpText>Price for the entire tier.</inlineHelpText>
    <label>Flat Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>