unpackaged/main/default/objects/bt_stripe__Tier__c/fields/bt_stripe__Plan__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>bt_stripe__Plan2__c</referenceTo>
    <relationshipLabel>Tiers</relationshipLabel>
    <relationshipName>Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>