unpackaged/main/default/objects/bt_stripe__Tier__c/fields/bt_stripe__Unit_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Unit_Amount__c</fullName>
    <description>Per unit price for units relevant to the tier.</description>
    <inlineHelpText>Per unit price for units relevant to the tier.</inlineHelpText>
    <label>Unit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>