unpackaged/main/default/objects/bt_stripe__Tier__c/fields/bt_stripe__Up_To__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Up_To__c</fullName>
    <description>Up to and including to this quantity will be contained in the tier.</description>
    <inlineHelpText>Up to and including to this quantity will be contained in the tier.</inlineHelpText>
    <label>Up To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>